welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:8: error: ';' expected but ',' found.
else { droite(),droite();
               ^